# SynacorChallenge

./: CMakeLists.txt  README.md  arch-spec  pwhashes.txt
app/: CMakeLists.txt  cmd.h  cmd_parser.cpp  cmd_parser.h  cmd_runner.cpp  cmd_runner.h  main.cpp
cmake/thirdparties/: boost.cmake  rangev3.cmake  typesafe.cmake
lib/: CMakeLists.txt
lib/inc/synacor/: synacor.h
lib/src/synacor/: address_space.cpp  arch.cpp  arch.h  assert.h  instructions.cpp  instructions.h  instructions_base.cpp  instructions_base.h  interfaces.h  io.cpp  io.h  machine.cpp  machine.h  memory_storage.cpp  memory_storage.h  registers.cpp  registers.h  stack.cpp  stack.h  synacor.cpp  value.cpp  value.h  value_storage.cpp  value_storage.h
tests/: CMakeLists.txt  instructions.cpp  machine.cpp  main.cpp  memory_storage.cpp  registers.cpp  stack.cpp  test_utils.h  value.cpp  value_storage.cpp
